--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <p>Hello World!</p>
     </h1>
     <p><a href="projects/project1.html">Project 1</a></p>
+    <img src="img/mountain.jpg"></img>
   </body>
 
 </html>
