adding sections to index.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,52 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
     <title>
-      Test Title
+      Web Portfolio
     </title>
   </head>
   <body>
     <h1>
-      <p>Hello World!</p>
+      <p>Web Portfolio</p>
     </h1>
+
+    <section id="info">
+      <section id="left">
+        <article>
+          <header>
+            <h3>Keller Chambers</h3>
+          </header>
+          <p>
+            email: khc009@bucknell.edu
+          </p>
+        </article>
+      </section>
+      <section id="right">
+        <article>
+          <header>
+            <h3>Full Stack Web Applications</h3>
+          </header>
+          <p>
+            CSCI379 - Alan Marchiori
+            Bucknell University - 2018
+          </p>
+        </article>
+      </section>
+    </section>
+
+    <section id="overview">
+      <article>
+        <header>
+          <h2>Overview</h2>
+        </header>
+        <p>
+          Overview content goes here...
+        </p>
+      </article>
+    </section>
+
+
     <p><a href="projects/project1.html">Project 1</a></p>
     <img src="img/mountain.jpg"></img>
   </body>
