adding to initial index

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       </article>
     </section>
 
+    <section id="projects">
+
+    </section>
+
 
     <p><a href="projects/project1.html">Project 1</a></p>
     <img src="img/mountain.jpg"></img>
