'completed assignment 4 (initial index page)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,27 @@
     </section>
 
     <section id="projects">
+      <article>
+          <header>
+            <h2>Projects</h2>
+          </header>
 
+        <section id="project1">
+          <article>
+            Project 1
+          </article>
+        </section>
+        <section id="project2">
+          <article>
+            Project 2
+          </article>
+        </section>
+        <section id="project2">
+          <article>
+            Project 3
+          </article>
+        </section>
+      </article>
     </section>
 
 
