--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section id="project1">
           <article>
-            Project 1
+            <a href="projects/project1.html">Project 1</a>
           </article>
         </section>
         <section id="project2">
@@ -72,7 +72,7 @@
     </section>
 
 
-    <p><a href="projects/project1.html">Project 1</a></p>
+
     <img src="img/mountain.jpg"></img>
   </body>
 
