--- a/index.html
+++ b/index.html
@@ -55,23 +55,36 @@
 
         <section id="project1">
           <article>
-            <a href="projects/project1.html">Project 1</a>
+            <header><h3>
+              <a href="projects/project1.html">Project 1</a>
+            </h3></header>
+              <p>
+                Coming Soon!
+              </p>
           </article>
         </section>
         <section id="project2">
           <article>
-            Project 2
+            <header><h3>
+              Project 2
+            </h3></header>
+            <p>
+              Coming Soon!
+            </p>
           </article>
         </section>
         <section id="project2">
           <article>
-            Project 3
+            <header><h3>
+              Project 3
+            </h3></header>
+            <p>
+              Coming Soon!
+            </p>
           </article>
         </section>
       </article>
     </section>
-
-
 
     <img src="img/mountain.jpg"></img>
   </body>
