--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      <p>Web Portfolio</p>
+      Web Portfolio
     </h1>
 
     <section id="info">
@@ -89,7 +89,7 @@
       </article>
     </section>
 
-    <img src="img/mountain.jpg"></img>
+    <img src="img/mountain.jpg" alt="Mountain"></img>
   </body>
 
 </html>
