--- a/index.html
+++ b/index.html
@@ -12,39 +12,26 @@
       Web Portfolio
     </h1>
 
-    <section id="info">
       <section id="left">
-        <article>
-          <header>
             <h3>Keller Chambers</h3>
-          </header>
           <p>
             email: khc009@bucknell.edu
           </p>
-        </article>
       </section>
+
       <section id="right">
-        <article>
-          <header>
-            <h3>Full Stack Web Applications</h3>
-          </header>
+          <h3>Full Stack Web Applications</h3>
           <p>
             CSCI379 - Alan Marchiori
             Bucknell University - 2018
           </p>
-        </article>
       </section>
-    </section>
 
     <section id="overview">
-      <article>
-        <header>
-          <h2>Overview</h2>
-        </header>
-        <p>
+        <h2>Overview</h2>
+        <article>
           Overview content goes here...
-        </p>
-      </article>
+        </article>
     </section>
 
     <section id="projects">
@@ -89,7 +76,7 @@
       </article>
     </section>
 
-    <img src="img/mountain.jpg" alt="Mountain"></img>
+    <img src="img/mountain.jpg" alt="Mountain">
   </body>
 
 </html>
