--- a/index.html
+++ b/index.html
@@ -27,53 +27,44 @@
           </p>
       </section>
 
-    <section id="overview">
+    <article id="overview">
         <h2>Overview</h2>
-        <article>
+        <p>
           Overview content goes here...
-        </article>
-    </section>
+        </p>
+    </article>
 
     <section id="projects">
-      <article>
-          <header>
-            <h2>Projects</h2>
-          </header>
+        <h2>Projects</h2>
 
-        <section id="project1">
-          <article>
-            <header><h3>
+        <article id="project1">
+
+            <header>
               <a href="projects/project1.html">Project 1</a>
-            </h3></header>
-              <p>
+            </header>
+            <p>
                 Coming Soon!
-              </p>
+            </p>
           </article>
-        </section>
 
-        <section id="project2">
-          <article>
-            <header><h3>
+        <article id="project2">
+            <header>
               Project 2
-            </h3></header>
+            </header>
             <p>
               Coming Soon!
             </p>
-          </article>
-        </section>
+        </article>
 
-        <section id="project3">
-          <article>
-            <header><h3>
+        <article id="project3">
+            <header>
               Project 3
-            </h3></header>
+            </header>
             <p>
               Coming Soon!
             </p>
-          </article>
-        </section>
+        </article>
 
-      </article>
     </section>
 
     <img src="img/mountain.jpg" alt="Mountain">
