--- a/fontfun.html
+++ b/fontfun.html
@@ -1,18 +1,12 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>
-    Project 1
-  </title>
+  <title>Font Fun!</title>
 </head>
+
 <body>
-  <h1>
-    <p>Project 1 Page</p>
-  </h1>
 
 </body>
-
 
 </html>
