--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>
       Web Portfolio
     </title>
+    <link rel="stylesheet" href "css/style.css">
+    <style>
+      h1{
+        text-align: center;
+      }
+      p{
+        color: cadetblue;
+      }
+    </style>
+
   </head>
+
   <body>
     <h1>
       Web Portfolio
