--- a/fontfun.html
+++ b/fontfun.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="utf-8">
   <title>Font Fun!</title>
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
+  <link rel="css" href="css/style.css">
+
 </head>
 
 <body>
+  <section>
+    <h1>Body Fonts</h1>
+      <h2 class="font1">Droid Sans</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua.
+        </p>
+      <h2 class="font2">Roboto Condensed</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua.
+      </p>
+      <h2 class="font3">PT Sans</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua.
+      </p>
 
+    <h1>Heading Fonts</h1>
+      <h2>Nunito</h2>
+      <h2>Cairo</h2>
+      <h2>Lobster</h2>
+  </section>
 </body>
 
 </html>
