--- a/fontfun.html
+++ b/fontfun.html
@@ -12,19 +12,19 @@
 <body>
   <section>
     <h1>Body Fonts</h1>
-      <h2 class="font1">Droid Sans</h2>
+      <h2 style="font1">Droid Sans</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur
           adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
-      <h2 class="font2">Roboto Condensed</h2>
+      <h2 style="font2">Roboto Condensed</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
       </p>
-      <h2 class="font3">PT Sans</h2>
+      <h2 style="font3">PT Sans</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
