--- a/fontfun.html
+++ b/fontfun.html
@@ -5,7 +5,7 @@
   <title>Font Fun!</title>
   <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
-  <link rel="css" href="css/style.css">
+  <link rel="css" href="css/fonts.css">
 
 </head>
 
