--- a/fontfun.html
+++ b/fontfun.html
@@ -13,13 +13,13 @@
   <section>
     <h1>Body Fonts</h1>
       <h2 style="font1">Droid Sans</h2>
-        <p>
+        <p class="font1">
           Lorem ipsum dolor sit amet, consectetur
           adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       <h2 style="font2">Roboto Condensed</h2>
-      <p>
+      <p style="font2">
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
