--- a/fontfun.html
+++ b/fontfun.html
@@ -5,27 +5,27 @@
   <title>Font Fun!</title>
   <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
-  <link rel="css" href="css/fonts.css">
+  <link rel="css" href="fonts.css">
 
 </head>
 
 <body>
   <section>
     <h1>Body Fonts</h1>
-      <h2 style="font1">Droid Sans</h2>
+      <h2 class="font1">Droid Sans</h2>
         <p class="font1">
           Lorem ipsum dolor sit amet, consectetur
           adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
-      <h2 style="font2">Roboto Condensed</h2>
-      <p style="font2">
+      <h2 class="font2">Roboto Condensed</h2>
+      <p class="font2">
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
       </p>
-      <h2 style="font3">PT Sans</h2>
-      <p>
+      <h2 class="font3">PT Sans</h2>
+      <p class="font3">
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
