done with 05_font fun

--- a/fontfun.html
+++ b/fontfun.html
@@ -5,12 +5,13 @@
   <title>Font Fun!</title>
   <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
-  <link rel="css" href="fonts.css">
+  <link rel="stylesheet" href="fonts.css">
 
 </head>
 
 <body>
-  <section>
+  <article>
+    <header><a href="index.html">Home</a></header>
     <h1>Body Fonts</h1>
       <h2 class="font1">Droid Sans</h2>
         <p class="font1">
@@ -24,7 +25,7 @@
         adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
       </p>
-      <h2 class="font3">PT Sans</h2>
+      <h2 class="font3" style="font-style: italic;">PT Sans</h2>
       <p class="font3">
         Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor
@@ -32,10 +33,25 @@
       </p>
 
     <h1>Heading Fonts</h1>
-      <h2>Nunito</h2>
-      <h2>Cairo</h2>
-      <h2>Lobster</h2>
-  </section>
+      <h2 class="heading1">Nunito</h2>
+      <p class="heading1" style="text-align: justify;">
+        Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua.
+      </p>
+      <h2 class="heading2">Cairo</h2>
+      <p class="heading2">
+        Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua.
+      </p>
+      <h2 class="heading3">Lobster</h2>
+      <p class="heading3">
+        Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua.
+      </p>
+  </article>
 </body>
 
 </html>
