--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </p>
         </article>
 
+        <a href="fontfun.html">Additional Coursework</a>
+
     </section>
 
     <img src="img/mountain.jpg" alt="Mountain">
