--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+
+<!--
+Keller Chambers  (c) 2018
+Bucknell University
+
+Homepage for portfolio website
+-->
+
 <html>
 
   <head>
@@ -11,9 +19,6 @@
       h1{
         text-align: center;
       }
-      p{
-        color: cadetblue;
-      }
     </style>
 
   </head>
@@ -24,8 +29,8 @@
     </h1>
 
     <section id="left">
-        <h3>Keller Chambers</h3>
-        <p>
+        <h3 class="primary1">Keller Chambers</h3>
+        <p class="primary1">
           email: khc009@bucknell.edu
         </p>
     </section>
