adding to style

--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@ Homepage for portfolio website
     <title>
       Web Portfolio
     </title>
-    <link rel="stylesheet" href "css/style.css">
-    <style>
-      h1{
-        text-align: center;
-      }
-    </style>
-
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
   </head>
 
   <body>
-    <h1>
+    <h1 class="s24">
       Web Portfolio
     </h1>
 
     <section id="left">
-        <h3 class="primary1">Keller Chambers</h3>
-        <p class="primary1">
+        <h3>Keller Chambers</h3>
+        <p>
           email: khc009@bucknell.edu
         </p>
     </section>
