--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Homepage for portfolio website
             </p>
         </article>
 
-        <a href="fontfun.html">Additional Coursework</a>
+        <p><a href="fontfun.html">Additional Coursework</a></p>
 
     </section>
 
