--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@ Homepage for portfolio website
       Web Portfolio
     </h1>
 
-    <section id="left">
-        <h3>Keller Chambers</h3>
-        <p>
-          email: khc009@bucknell.edu
-        </p>
-    </section>
+    <section id="info">
+      <section id="left">
+          <h3>Keller Chambers</h3>
+          <p>
+            email: khc009@bucknell.edu
+          </p>
+      </section>
 
-    <section id="right">
-        <h3>Full Stack Web Applications</h3>
-        <p>
-          CSCI379 - Alan Marchiori
-          Bucknell University - 2018
-        </p>
+      <section id="right">
+          <h3>Full Stack Web Applications</h3>
+          <p>
+            CSCI379 - Alan Marchiori
+            Bucknell University - 2018
+          </p>
+      </section>
     </section>
 
     <article id="overview">
