changed to em scale

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Homepage for portfolio website
         <article id="project1">
 
             <h3>
-              <a href="projects/project1.html">Project 1</a>
+              <a>Project 1</a>
             </h3>
             <p>
                 Coming Soon!
