--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Homepage for portfolio website
     </article>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2 class="cTitle">Projects</h2>
 
         <article id="project1">
 
