--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ Homepage for portfolio website
       Web Portfolio
     </h1>
 
-    <section id="info">
-      <section id="left">
+    <section id="info" class="topSection">
+      <section id="left" class="topBlock">
           <h3>Keller Chambers</h3>
           <p>
             email: khc009@bucknell.edu
           </p>
       </section>
 
-      <section id="right">
+      <section id="right" class="topBlock">
           <h3>Full Stack Web Applications</h3>
           <p>
             CSCI379 - Alan Marchiori
