--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@ Homepage for portfolio website
     <section id="info" class="topSection">
       <section id="left" class="topBlock">
           <h3>Keller Chambers</h3>
-          <p>
-            email: khc009@bucknell.edu
-          </p>
+          <p class="noMargin">email: khc009@bucknell.edu</p>
+          <p class="noMargin">Full Stack Web Applications</p>
+          <p class="noMargin">CSCI379 - Alan Marchiori</p>
+          <p class="noMargin">Bucknell University - 2018</p>
       </section>
 
-      <section id="right" class="topBlock">
-          <h3>Full Stack Web Applications</h3>
-          <p>
-            CSCI379 - Alan Marchiori
-            Bucknell University - 2018
-          </p>
-      </section>
+
     </section>
 
     <article id="overview">
@@ -54,7 +49,7 @@ Homepage for portfolio website
         <article id="project1">
 
             <h3>
-              <a>Project 1</a>
+              Project 1
             </h3>
             <p>
                 Coming Soon!
