Working on scaling with different size screens

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Homepage for portfolio website
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       Web Portfolio
     </title>
@@ -43,10 +44,11 @@ Homepage for portfolio website
         </p>
     </article>
 
-    <section id="projects">
-        <h2 class="cTitle">Projects</h2>
+    <section id="projects" class="container">
+      <h2 class="cTitle">Projects</h2>
 
-        <article id="project1">
+      <section class="row">
+        <article id="project1" class="projcolumn">
 
             <h3>
               Project 1
@@ -56,7 +58,7 @@ Homepage for portfolio website
             </p>
           </article>
 
-        <article id="project2">
+        <article id="project2" class="projcolumn">
             <h3>
               Project 2
             </h3>
@@ -65,7 +67,7 @@ Homepage for portfolio website
             </p>
         </article>
 
-        <article id="project3">
+        <article id="project3" class="projcolumn">
             <h3>
               Project 3
             </h3>
@@ -73,7 +75,7 @@ Homepage for portfolio website
               Coming Soon!
             </p>
         </article>
-
+      </section>
         <p><a href="fontfun.html">Additional Coursework</a></p>
 
     </section>
