Working on project 1

--- a/index.html
+++ b/index.html
@@ -24,57 +24,60 @@ Homepage for portfolio website
       Web Portfolio
     </h1>
 
-    <section id="info" class="topSection">
-      <section id="left" class="topBlock">
+    <section class="section container">
+      <article class="box">
+        <img src="img/me.png" alt="Picture of me" id="me">
+      </article>
+      <article class="box">
           <h3>Keller Chambers</h3>
           <p class="noMargin">email: khc009@bucknell.edu</p>
           <p class="noMargin">Full Stack Web Applications</p>
           <p class="noMargin">CSCI379 - Alan Marchiori</p>
           <p class="noMargin">Bucknell University - 2018</p>
-      </section>
+      </article>
 
 
     </section>
 
     <article id="overview">
-        <h2>Overview</h2>
-        <p>
-          Overview content goes here...
+        <h2 class="noMargin">Overview</h2>
+        <p class="noMargin">
+          Welcome to my portfolio!
         </p>
     </article>
 
     <section id="projects">
-        <h2 class="cTitle">Projects</h2>
+        <h2 class="center">Projects</h2>
 
-        <article id="project1">
+        <article id="project1" class="section">
 
-            <h3>
+            <h3 class="noMargin">
               Project 1
             </h3>
-            <p>
+            <p class="center">
                 Coming Soon!
             </p>
           </article>
 
-        <article id="project2">
-            <h3>
+        <article id="project2" class="section">
+            <h3 class="noMargin">
               Project 2
             </h3>
-            <p>
+            <p class="center">
               Coming Soon!
             </p>
         </article>
 
-        <article id="project3">
-            <h3>
+        <article id="project3" class="section">
+            <h3 class="noMargin">
               Project 3
             </h3>
-            <p>
+            <p class="center">
               Coming Soon!
             </p>
         </article>
 
-        <p><a href="fontfun.html">Additional Coursework</a></p>
+        <p><a href="fontfun.html">Font Sampler</a></p>
 
     </section>
 
