working on style

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ Homepage for portfolio website
       Web Portfolio
     </h1>
 
-    <section class="section container">
-      <article class="box">
+    <section class="section row">
+      <article class="infocolumn">
         <img src="img/me.png" alt="Picture of me" id="me">
       </article>
-      <article class="box">
+      <article class="infocolumn">
           <h3>Keller Chambers</h3>
           <p class="noMargin">email: khc009@bucknell.edu</p>
           <p class="noMargin">Full Stack Web Applications</p>
