--- a/index.html
+++ b/index.html
@@ -21,66 +21,70 @@ Homepage for portfolio website
   </head>
 
   <body>
-    <h1>
-      Web Portfolio
-    </h1>
 
-    <section class="section row">
-      <article class="infocolumn">
-        <img src="img/me.png" alt="Picture of me" id="me">
+    <section class="container">
+
+      <h1>
+        Web Portfolio
+      </h1>
+
+      <section class="section row">
+        <article class="infocolumn">
+          <img src="img/me.png" alt="Picture of me" id="me">
+        </article>
+        <article class="infocolumn">
+            <h3>Keller Chambers</h3>
+            <p class="noMargin">email: khc009@bucknell.edu</p>
+            <p class="noMargin">Full Stack Web Applications</p>
+            <p class="noMargin">CSCI379 - Alan Marchiori</p>
+            <p class="noMargin">Bucknell University - 2018</p>
+        </article>
+
+
+      </section>
+
+      <article id="overview">
+          <h2 class="noMargin">Overview</h2>
+          <p class="noMargin">
+            Welcome to my portfolio!
+          </p>
       </article>
-      <article class="infocolumn">
-          <h3>Keller Chambers</h3>
-          <p class="noMargin">email: khc009@bucknell.edu</p>
-          <p class="noMargin">Full Stack Web Applications</p>
-          <p class="noMargin">CSCI379 - Alan Marchiori</p>
-          <p class="noMargin">Bucknell University - 2018</p>
-      </article>
 
+      <section id="projects">
+        <h2 class="cTitle">Projects</h2>
 
-    </section>
+        <section class="row">
+          <article id="project1" class="projcolumn">
 
-    <article id="overview">
-        <h2 class="noMargin">Overview</h2>
-        <p class="noMargin">
-          Welcome to my portfolio!
-        </p>
-    </article>
+              <h3 class="noMargin">
+                Project 1
+              </h3>
+              <p class="center">
+                  Coming Soon!
+              </p>
+            </article>
 
-    <section id="projects" class="container">
-      <h2 class="cTitle">Projects</h2>
-
-      <section class="row">
-        <article id="project1" class="projcolumn">
-
-            <h3 class="noMargin">
-              Project 1
-            </h3>
-            <p class="center">
+          <article id="project2" class="projcolumn">
+              <h3>
+                Project 2
+              </h3>
+              <p class="center">
                 Coming Soon!
-            </p>
+              </p>
           </article>
 
-        <article id="project2" class="projcolumn">
-            <h3>
-              Project 2
-            </h3>
-            <p class="center">
-              Coming Soon!
-            </p>
-        </article>
+          <article id="project3" class="projcolumn">
+              <h3>
+                Project 3
+              </h3>
+              <p class="center">
+                Coming Soon!
+              </p>
+          </article>
+        </section>
+          <p><a href="fontfun.html">Additional Coursework</a></p>
 
-        <article id="project3" class="projcolumn">
-            <h3>
-              Project 3
-            </h3>
-            <p class="center">
-              Coming Soon!
-            </p>
-        </article>
       </section>
-        <p><a href="fontfun.html">Additional Coursework</a></p>
-
     </section>
 
   </body>
