--- a/index.html
+++ b/index.html
@@ -28,44 +28,59 @@ Homepage for portfolio website
         Web Portfolio
       </h1>
 
-      <section class="section row">
+      <section class="section row blueBack">
         <article class="infocolumn">
           <img src="img/me.png" alt="Picture of me" id="me">
         </article>
-        <article class="infocolumn">
-            <h3>Keller Chambers</h3>
+        <article class="infocolumn row">
+          <section class="namecolumn ">
+            <h3 class="noMargin">Keller Chambers</h3>
             <p class="noMargin">email: khc009@bucknell.edu</p>
+          </section>
+          <section class="namecolumn">
             <p class="noMargin">Full Stack Web Applications</p>
             <p class="noMargin">CSCI379 - Alan Marchiori</p>
             <p class="noMargin">Bucknell University - 2018</p>
+          </section>
         </article>
 
 
       </section>
 
-      <article id="overview">
-          <h2 class="noMargin">Overview</h2>
+      <article class="section">
+          <h2 class="noMargin">Sample Coursework</h2>
           <p class="noMargin">
-            Welcome to my portfolio!
+            Welcome to my web portfolio!  This is where I keep
+            and showcase work from CSCI379: Full Stack Web Applications.
+            You can see some of my projects below.
+          </p>
+          <p class="noMargin">
+            Take a look at my <a href="fontfun.html">Font Sampler</a>
           </p>
       </article>
 
       <section id="projects">
-        <h2 class="cTitle">Projects</h2>
+        <h2 class="noBotMargin">Projects</h2>
 
         <section class="row">
-          <article id="project1" class="projcolumn">
 
-              <h3 class="noMargin">
-                Project 1
-              </h3>
-              <p class="center">
-                  Coming Soon!
-              </p>
+            <article class="project clickable">
+              <a href="index.html" class="noUnderline">
+                <h3 class="noMargin">
+                  Project 1
+                </h3>
+                <p>
+                    Project 1 consisted of building the home page
+                    you see here!  The focus was on responsive design,
+                    ensuring that pages scale nicely with the screen
+                    they are being viewed on.
+                </p>
+              </a>
             </article>
 
-          <article id="project2" class="projcolumn">
-              <h3>
+
+          <article class="project">
+              <h3 class="noMargin">
                 Project 2
               </h3>
               <p class="center">
@@ -73,8 +88,8 @@ Homepage for portfolio website
               </p>
           </article>
 
-          <article id="project3" class="projcolumn">
-              <h3>
+          <article class="project">
+              <h3 class="noMargin">
                 Project 3
               </h3>
               <p class="center">
@@ -82,9 +97,15 @@ Homepage for portfolio website
               </p>
           </article>
         </section>
-          <p><a href="fontfun.html">Additional Coursework</a></p>
 
       </section>
+      <br>
+      <footer>
+        <p>Keller Chambers - 2018</p>
+        <p>Contact information: <a href="mailto:khc009@bucknell.edu">
+          khc009@bucknell.edu</a>.
+        </p>
+        </footer>
     </section>
 
   </body>
