--- a/projects/project1.html
+++ b/projects/project1.html
@@ -1,18 +1,114 @@
 <!doctype html>
+
+<!--
+Keller Chambers  (c) 2018
+Bucknell University
+
+Homepage for portfolio website
+-->
+
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <title>
-    Project 1
-  </title>
-</head>
-<body>
-  <h1>
-    <p>Project 1 Page</p>
-  </h1>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+      Web Portfolio
+    </title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
+  </head>
 
-</body>
+  <body>
 
+    <section class="container">
+
+      <h1 class="noMargin">
+        Web Portfolio
+      </h1>
+
+      <a href="../index.html"><p class="font2">Home</p></a>
+
+      <section class="section row blueBack">
+        <article class="infocolumn">
+          <img src="../img/me.png" alt="Picture of me" id="me">
+        </article>
+        <article class="infocolumn row">
+          <section class="namecolumn ">
+            <h3 class="noMargin">Keller Chambers</h3>
+            <p class="noMargin">email: khc009@bucknell.edu</p>
+          </section>
+          <section class="namecolumn">
+            <p class="noMargin">Full Stack Web Applications</p>
+            <p class="noMargin">CSCI379 - Alan Marchiori</p>
+            <p class="noMargin">Bucknell University - 2018</p>
+          </section>
+        </article>
+
+      </section>
+
+      <article class="section">
+          <h2 class="noMargin">Sample Coursework</h2>
+          <p class="noMargin">
+            Welcome to my web portfolio!  This is where I keep
+            and showcase work from CSCI379: Full Stack Web Applications.
+            You can see some of my projects below.
+          </p>
+          <p class="noMargin">
+            Take a look at my <a href="../fontfun.html">Font Sampler</a>
+          </p>
+      </article>
+
+      <section id="projects">
+        <h2 class="noBotMargin">Projects</h2>
+
+        <section class="row">
+
+            <article class="project clickable">
+              <a href="project1.html" class="noUnderline">
+                <h3 class="noMargin">
+                  Project 1
+                </h3>
+                <p>
+                    Project 1 consisted of building the home page
+                    you see here!  The focus was on responsive design,
+                    ensuring that pages scale nicely with the screen
+                    they are being viewed on.
+                </p>
+              </a>
+            </article>
+
+
+          <article class="project">
+              <h3 class="noMargin">
+                Project 2
+              </h3>
+              <p class="center">
+                Coming Soon!
+              </p>
+          </article>
+
+          <article class="project">
+              <h3 class="noMargin">
+                Project 3
+              </h3>
+              <p class="center">
+                Coming Soon!
+              </p>
+          </article>
+        </section>
+
+      </section>
+      <br>
+      <footer>
+        <p>Keller Chambers - 2018</p>
+        <p>Contact information: <a href="mailto:khc009@bucknell.edu">
+          khc009@bucknell.edu</a>.
+        </p>
+        </footer>
+    </section>
+
+  </body>
 
 </html>
