Adding bootstrap grid

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Homepage for portfolio website
 
         <section class="row">
 
-            <article class="project clickable">
+            <article class="clickable col">
               <a href="projects/project1.html" class="noUnderline">
                 <h3 class="noMargin">
                   Project 1
@@ -84,7 +84,7 @@ Homepage for portfolio website
             </article>
 
 
-          <article class="project">
+          <article class="col">
               <h3 class="noMargin">
                 Project 2
               </h3>
@@ -93,7 +93,7 @@ Homepage for portfolio website
               </p>
           </article>
 
-          <article class="project">
+          <article class="col">
               <h3 class="noMargin">
                 Project 3
               </h3>
