--- a/projects/project1.html
+++ b/projects/project1.html
@@ -15,7 +15,7 @@ Homepage for portfolio website
     <title>
       Web Portfolio
     </title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="proj1_style.css">
     <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
   </head>
