index working, other than centering issues

--- a/index.html
+++ b/index.html
@@ -34,25 +34,21 @@ Homepage for portfolio website
         Web Portfolio
       </h1>
 
-      <section class="section row blueBack">
-        <article class="infocolumn">
-          <img src="img/me.png" alt="Picture of me" id="me">
+      <div class="orangeBorder row blueBack">
+        <article class="col-sm;" style="background-color: white;">
+          <img src="img/me.png" alt="Picture of me" id="me" class="align:middle">
         </article>
-        <article class="infocolumn row">
-          <section class="namecolumn ">
+        <article class="col-sm text-center" class="align:middle">
             <h3 class="noMargin">Keller Chambers</h3>
             <p class="noMargin">email: khc009@bucknell.edu</p>
-          </section>
-          <section class="namecolumn">
             <p class="noMargin">Full Stack Web Applications</p>
             <p class="noMargin">CSCI379 - Alan Marchiori</p>
             <p class="noMargin">Bucknell University - 2018</p>
-          </section>
         </article>
 
-      </section>
+      </div>
 
-      <article class="section">
+      <article class="orangeBorder">
           <h2 class="noMargin">Sample Coursework</h2>
           <p class="noMargin">
             Welcome to my web portfolio!  This is where I keep
@@ -67,10 +63,10 @@ Homepage for portfolio website
       <section id="projects">
         <h2 class="noBotMargin">Projects</h2>
 
-        <section class="row">
+        <div class="row">
 
-            <article class="clickable col">
-              <a href="projects/project1.html" class="noUnderline">
+            <article class="clickable col-md project">
+              <a href="projects/1a/project1.html">
                 <h3 class="noMargin">
                   Project 1
                 </h3>
@@ -84,7 +80,7 @@ Homepage for portfolio website
             </article>
 
 
-          <article class="col">
+          <article class="col-md project">
               <h3 class="noMargin">
                 Project 2
               </h3>
@@ -93,7 +89,7 @@ Homepage for portfolio website
               </p>
           </article>
 
-          <article class="col">
+          <article class="col-lg project">
               <h3 class="noMargin">
                 Project 3
               </h3>
@@ -101,7 +97,7 @@ Homepage for portfolio website
                 Coming Soon!
               </p>
           </article>
-        </section>
+        </div>
 
       </section>
       <br>
@@ -110,7 +106,7 @@ Homepage for portfolio website
         <p>Contact information: <a href="mailto:khc009@bucknell.edu">
           khc009@bucknell.edu</a>.
         </p>
-        </footer>
+      </footer>
     </section>
 
     <!-- JS Imports -->
