--- a/projects/1a/project1.html
+++ b/projects/1a/project1.html
@@ -28,11 +28,11 @@ Homepage for portfolio website
         Web Portfolio
       </h1>
 
-      <a href="../index.html"><p class="font2">Home</p></a>
+      <a href="../../index.html"><p class="font2">Home</p></a>
 
-      <section class="section row blueBack">
+      <div class="section row blueBack">
         <article class="infocolumn">
-          <img src="../img/me.png" alt="Picture of me" id="me">
+          <img src="../../img/me.png" alt="Picture of me" id="me">
         </article>
         <article class="infocolumn row">
           <section class="namecolumn ">
@@ -46,7 +46,7 @@ Homepage for portfolio website
           </section>
         </article>
 
-      </section>
+      </div>
 
       <article class="section">
           <h2 class="noMargin">Sample Coursework</h2>
@@ -63,7 +63,7 @@ Homepage for portfolio website
       <section id="projects">
         <h2 class="noBotMargin">Projects</h2>
 
-        <section class="row">
+        <div class="row">
 
             <article class="project clickable">
               <a href="project1.html" class="noUnderline">
@@ -97,7 +97,7 @@ Homepage for portfolio website
                 Coming Soon!
               </p>
           </article>
-        </section>
+        </div>
 
       </section>
       <br>
