--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ Homepage for portfolio website
       </h1>
 
       <div class="orangeBorder row blueBack">
-        <article class="col-sm;" style="background-color: white;">
-          <img src="img/me.png" alt="Picture of me" id="me" class="align:middle">
+        <article class="col-sm-12 col-md-6" style="background-color: white;">
+          <img src="img/me.png" alt="Picture of me" id="me" class="mx-auto d-block">
         </article>
-        <article class="col-sm text-center" class="align:middle">
+        <article class="col-sm-12 col-md-6 text-center" class="align:middle">
             <h3 class="noMargin">Keller Chambers</h3>
             <p class="noMargin">email: khc009@bucknell.edu</p>
             <p class="noMargin">Full Stack Web Applications</p>
@@ -49,7 +49,7 @@ Homepage for portfolio website
       </div>
 
       <article class="orangeBorder">
-          <h2 class="noMargin">Sample Coursework</h2>
+          <h2>Sample Coursework</h2>
           <p class="noMargin">
             Welcome to my web portfolio!  This is where I keep
             and showcase work from CSCI379: Full Stack Web Applications.
@@ -61,7 +61,7 @@ Homepage for portfolio website
       </article>
 
       <section id="projects">
-        <h2 class="noBotMargin">Projects</h2>
+        <h2>Projects</h2>
 
         <div class="row">
 
@@ -72,9 +72,9 @@ Homepage for portfolio website
                 </h3>
                 <p>
                     Project 1 consisted of building the home page
-                    you see here!  The focus was on responsive design,
+                    you see here! The focus was on responsive design,
                     ensuring that pages scale nicely with the screen
-                    they are being viewed on.
+                    they are being viewed on. Click here to see it!
                 </p>
               </a>
             </article>
