--- a/projects/1a/project1.html
+++ b/projects/1a/project1.html
@@ -56,7 +56,7 @@ Homepage for portfolio website
             You can see some of my projects below.
           </p>
           <p class="noMargin">
-            Take a look at my <a href="../fontfun.html">Font Sampler</a>
+            Take a look at my <a href="../../fontfun.html">Font Sampler</a>
           </p>
       </article>
 
