--- a/index.html
+++ b/index.html
@@ -28,44 +28,63 @@ Homepage for portfolio website
 
   <body>
 
-    <section class="container">
+    <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar fixed-top">
+      <a class="navbar-brand" href="#">Keller Chambers</a>
+      <div class="navbar-nav-scroll">
+        <ul class="navbar-nav bd-navbar-nav flex-row">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects/1a/project1.html">Project1a</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Project1b</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <div class="container">
 
       <h1>
         Web Portfolio
       </h1>
 
       <div class="orangeBorder row blueBack">
-        <article class="col-sm-12 col-md-6" style="background-color: white;">
+        <div class="col-sm-12 col-md-6">
           <img src="img/me.png" alt="Picture of me" id="me" class="mx-auto d-block">
-        </article>
-        <article class="col-sm-12 col-md-6 text-center" class="align:middle">
+        </div>
+        <div class="col-sm-12 col-md-6 text-center" class="align:middle">
             <h3 class="noMargin">Keller Chambers</h3>
-            <p class="noMargin">email: khc009@bucknell.edu</p>
+            <p class="">email: khc009@bucknell.edu</p>
             <p class="noMargin">Full Stack Web Applications</p>
             <p class="noMargin">CSCI379 - Alan Marchiori</p>
             <p class="noMargin">Bucknell University - 2018</p>
-        </article>
+        </div>
 
       </div>
 
       <article class="orangeBorder">
           <h2>Sample Coursework</h2>
-          <p class="noMargin">
+          <p>
             Welcome to my web portfolio!  This is where I keep
             and showcase work from CSCI379: Full Stack Web Applications.
             You can see some of my projects below.
           </p>
-          <p class="noMargin">
+          <p>
             Take a look at my <a href="fontfun.html">Font Sampler</a>
+            and Bootstrap <a href="projects/1b/example1.html">Example Page 1</a>
+            and <a href="projects/1b/example2.html">Example Page 2</a>.
           </p>
       </article>
 
-      <section id="projects">
+      <section>
         <h2>Projects</h2>
 
         <div class="row">
 
-            <article class="clickable col-md project">
+            <article class="clickable col-12 col-md-6 col-lg-4 project">
               <a href="projects/1a/project1.html">
                 <h3 class="noMargin">
                   Project 1
@@ -80,7 +99,7 @@ Homepage for portfolio website
             </article>
 
 
-          <article class="col-md project">
+          <article class="col-12 col-md-6 col-lg-4 project">
               <h3 class="noMargin">
                 Project 2
               </h3>
@@ -89,7 +108,7 @@ Homepage for portfolio website
               </p>
           </article>
 
-          <article class="col-lg project">
+          <article class="col-12 col-md-12 col-lg-4 project">
               <h3 class="noMargin">
                 Project 3
               </h3>
@@ -101,13 +120,13 @@ Homepage for portfolio website
 
       </section>
       <br>
-      <footer>
+      <footer class="text-center">
         <p>Keller Chambers - 2018</p>
         <p>Contact information: <a href="mailto:khc009@bucknell.edu">
           khc009@bucknell.edu</a>.
         </p>
       </footer>
-    </section>
+    </div>
 
     <!-- JS Imports -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
