--- a/projects/1b/example1.html
+++ b/projects/1b/example1.html
@@ -22,7 +22,7 @@
           <h3 class="masthead-brand">Keller Chambers</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="../../index.html">Projects</a>
             <a class="nav-link" href="#">Contact</a>
           </nav>
         </div>
@@ -30,9 +30,10 @@
 
       <main role="main">
         <h1 class="cover-heading">Web Portfolio</h1>
-        <p class="lead">Welcome to my Full Stack Portfolio.  Here, you can see my projects and other coursework from CSCI379</p>
+        <p class="lead">Welcome to my Full Stack Portfolio example.  Here, you can see an example of
+                        a front page using bootstrap.</p>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Enter</a>
+          <a href="../../index.html" class="btn btn-lg btn-secondary">Enter</a>
         </p>
       </main>
 
@@ -45,10 +46,6 @@
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
 
 
   </body>
