--- a/projects/1b/example2.html
+++ b/projects/1b/example2.html
@@ -59,7 +59,7 @@
             <p>
               <a class="btn btn-secondary" href="../1a/project1.html" role="button">See Project 1a &raquo;</a>
             </p><p>
-              <a class="btn btn-secondary" href="../../index.html" role="button">See Project 1b &raquo;</a>
+              <a class="btn btn-secondary" href="project1b.html" role="button">See Project 1b &raquo;</a>
             </p>
           </div>
           <div class="col-md-4">
