--- a/projects/1b/project1b.html
+++ b/projects/1b/project1b.html
@@ -21,7 +21,7 @@ Homepage for portfolio website
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
   </head>
@@ -33,13 +33,13 @@ Homepage for portfolio website
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects/1a/project1.html">Project1a</a>
+            <a class="nav-link" href="../1a/project1.html">Project1a</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects/1b/project1b.html">Project1b</a>
+            <a class="nav-link" href="#">Project1b</a>
           </li>
         </ul>
       </div>
@@ -53,11 +53,11 @@ Homepage for portfolio website
 
       <div class="orangeBorder row blueBack">
         <div class="col-sm-12 col-md-6">
-          <img src="img/me.png" alt="Picture of me" id="me" class="mx-auto d-block">
+          <img src="../../img/me.png" alt="Picture of me" id="me" class="mx-auto d-block">
         </div>
         <div class="col-sm-12 col-md-6 text-center" class="align:middle">
             <h3 class="noMargin">Keller Chambers</h3>
-            <p class="">email: khc009@bucknell.edu</p>
+            <p>email: khc009@bucknell.edu</p>
             <p class="noMargin">Full Stack Web Applications</p>
             <p class="noMargin">CSCI379 - Alan Marchiori</p>
             <p class="noMargin">Bucknell University - 2018</p>
@@ -73,9 +73,9 @@ Homepage for portfolio website
             You can see some of my projects below.
           </p>
           <p>
-            Take a look at my <a href="fontfun.html">Font Sampler</a>
-            and Bootstrap <a href="projects/1b/example1.html">Example Page 1</a>
-            and <a href="projects/1b/example2.html">Example Page 2</a>.
+            Take a look at my <a href="../../fontfun.html">Font Sampler</a>
+            and Bootstrap <a href="example1.html">Example Page 1</a>
+            and <a href="example2.html">Example Page 2</a>.
           </p>
       </article>
 
@@ -85,7 +85,7 @@ Homepage for portfolio website
         <div class="row">
 
             <article class="clickable col-12 col-md-6 col-lg-4 project">
-              <a href="projects/1a/project1.html">
+              <a href="../1a/project1.html">
                 <h3 class="noMargin">
                   Project 1
                 </h3>
