dog_api image working

--- a/projects/dog_api/dogs.html
+++ b/projects/dog_api/dogs.html
@@ -47,7 +47,9 @@
 
       <div>
 
-        <p>Enter your first OR last name here:</p>
+        <p>Find out what dog breed your name is most similar to by 
+          entering your first OR last name here:
+        </p>
 
         <form name="name_form" action="">
           Name:<br>
@@ -58,6 +60,7 @@
         
         <br><br>
         <div id="breed_return"></div>
+        <div id="breed_image"></div>
 
       </div>
 
