--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ Homepage for portfolio website
             and Bootstrap <a href="projects/1b/example1.html">Example Page 1</a>
             and <a href="projects/1b/example2.html">Example Page 2</a>.
           </p>
+          <p>
+            <a href="projects/dog_api/dogs.html">Click here to find out what Dog Breed you are!</a>
+          </p>
       </article>
 
       <section>
