--- a/projects/dog_api/dogs.html
+++ b/projects/dog_api/dogs.html
@@ -15,7 +15,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
-    <!--link rel="stylesheet" href="../css/style.css"-->
+    <link rel="stylesheet" href="dogs.css">
     <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Condensed|PT+Sans|Nunito|Lobster|Cairo">
   
@@ -24,32 +24,33 @@
 
 <body>
     
-	<!--header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar fixed-top">
-      <a class="navbar-brand" href="#">Keller Chambers</a>
+	<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar fixed-top">
+      <a class="navbar-brand" href="../../index.html">Keller Chambers</a>
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           	<li class="nav-item active">
-            	<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            	<a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
           	</li>
           	<li class="nav-item">
-            	<a class="nav-link" href="/projects/1a/project1.html">Project1a</a>
+            	<a class="nav-link" href="../1a/project1.html">Project1a</a>
           	</li>
           	<li class="nav-item">
-            	<a class="nav-link" href="/projects/1b/project1b.html">Project1b</a>
+            	<a class="nav-link" href="../1b/project1b.html">Project1b</a>
           	</li>
         </ul>
       </div>
-    </header-->
+    </header>
 
   	<div class="container">
 
       <h1> What Dog Breed Are You? </h1>
 
-      <div>
+      <p>Find out what dog breed your name is most similar to by 
+        entering your first AND/OR last name and then clicking the 
+        button below:
+      </p>
 
-        <p>Find out what dog breed your name is most similar to by 
-          entering your first OR last name here:
-        </p>
+        <div class="text-center">
 
         <form name="name_form" action="">
           Name:<br>
